--- a/STM32F469I-DISCO/F469I-DISCO_Bring-Up/F469I-DISCO_Bring-Up.ioc
+++ b/STM32F469I-DISCO/F469I-DISCO_Bring-Up/F469I-DISCO_Bring-Up.ioc
@@ -24,12 +24,14 @@ DSIHOST_D1P.GPIO_Label=DSI_D1_P
 DSIHOST_D1P.Locked=true
 DSIHOST_D1P.Signal=DSIHOST_D1P
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F469NIH6
 Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IPNb=2
+Mcu.IP2=USART3
+Mcu.IPNb=3
 Mcu.Name=STM32F469NIHx
 Mcu.Package=TFBGA216
 Mcu.Pin0=PE4
@@ -160,6 +162,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
+NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0/WKUP.GPIOParameters=GPIO_Label
 PA0/WKUP.GPIO_Label=WAKEUP [B2]
@@ -212,10 +215,12 @@ PB0.Signal=GPIO_Output
 PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=STLK_RX [STLINK V2-1_U2_RX]
 PB10.Locked=true
+PB10.Mode=Asynchronous
 PB10.Signal=USART3_TX
 PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=STLK_TX [STLINK V2-1_U2_TX]
 PB11.Locked=true
+PB11.Mode=Asynchronous
 PB11.Signal=USART3_RX
 PB2/BOOT1.GPIOParameters=GPIO_Label
 PB2/BOOT1.GPIO_Label=OTG_FS1_PowerSwitchOn [STMPS2151STR_En]
@@ -281,8 +286,10 @@ PC12.GPIO_Speed_High_Default=GPIO_SPEED_FREQ_VERY_HIGH
 PC12.Locked=true
 PC12.Signal=SDIO_CK
 PC14/OSC32_IN.Locked=true
+PC14/OSC32_IN.Mode=LSE-External-Oscillator
 PC14/OSC32_IN.Signal=RCC_OSC32_IN
 PC15/OSC32_OUT.Locked=true
+PC15/OSC32_OUT.Mode=LSE-External-Oscillator
 PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
 PC8.GPIOParameters=GPIO_PuPd,GPIO_Speed_High_Default,GPIO_Label,GPIO_Mode
 PC8.GPIO_Label=uSD_D0
@@ -580,8 +587,10 @@ PG9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PG9.Locked=true
 PG9.Signal=USART6_RX
 PH0/OSC_IN.Locked=true
+PH0/OSC_IN.Mode=HSE-External-Oscillator
 PH0/OSC_IN.Signal=RCC_OSC_IN
 PH1/OSC_OUT.Locked=true
+PH1/OSC_OUT.Mode=HSE-External-Oscillator
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PH10.GPIOParameters=GPIO_Label
 PH10.GPIO_Label=D18
@@ -764,27 +773,51 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
-RCC.CortexFreq_Value=16000000
-RCC.DSIFreq_Value=62500000
-RCC.DSITXEscFreq_Value=15625000
+RCC.AHBFreq_Value=180000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV4
+RCC.APB1Freq_Value=45000000
+RCC.APB1TimFreq_Value=90000000
+RCC.APB2CLKDivider=RCC_HCLK_DIV2
+RCC.APB2Freq_Value=90000000
+RCC.APB2TimFreq_Value=180000000
+RCC.CortexFreq_Value=180000000
+RCC.DSIFreq_Value=20000000
+RCC.DSITXEscFreq_Value=5000000
+RCC.EthernetFreq_Value=180000000
+RCC.FCLKCortexFreq_Value=180000000
 RCC.FamilyName=M
-RCC.IPParameters=CortexFreq_Value,DSIFreq_Value,DSITXEscFreq_Value,FamilyName,LCDTFTFreq_Value,PLLCLKFreq_Value,PLLDSIVCOFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
-RCC.LCDTFTFreq_Value=48000000
-RCC.PLLCLKFreq_Value=96000000
-RCC.PLLDSIVCOFreq_Value=1000000000
-RCC.PLLI2SQCLKFreq_Value=48000000
-RCC.PLLI2SRCLKFreq_Value=96000000
-RCC.PLLQCLKFreq_Value=48000000
-RCC.PLLRCLKFreq_Value=96000000
-RCC.PLLSAIPCLKFreq_Value=96000000
-RCC.PLLSAIQCLKFreq_Value=48000000
-RCC.PLLSAIRCLKFreq_Value=96000000
+RCC.HCLKFreq_Value=180000000
+RCC.HSE_VALUE=8000000
+RCC.I2SFreq_Value=192000000
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,DSIFreq_Value,DSITXEscFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,I2SFreq_Value,LCDTFTFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLDSIFreq_Value,PLLDSIVCOFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLRFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
+RCC.LCDTFTFreq_Value=96000000
+RCC.MCO2PinFreq_Value=180000000
+RCC.PLLCLKFreq_Value=180000000
+RCC.PLLDSIFreq_Value=160000000
+RCC.PLLDSIVCOFreq_Value=320000000
+RCC.PLLI2SQCLKFreq_Value=96000000
+RCC.PLLI2SRCLKFreq_Value=192000000
+RCC.PLLM=4
+RCC.PLLN=180
+RCC.PLLQCLKFreq_Value=90000000
+RCC.PLLRCLKFreq_Value=180000000
+RCC.PLLRFreq_Value=180000000
+RCC.PLLSAIPCLKFreq_Value=192000000
+RCC.PLLSAIQCLKFreq_Value=96000000
+RCC.PLLSAIRCLKFreq_Value=192000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RTCFreq_Value=32000
-RCC.RTCHSEDivFreq_Value=12500000
-RCC.VCOI2SOutputFreq_Value=192000000
-RCC.VCOInputFreq_Value=1000000
-RCC.VCOOutputFreq_Value=192000000
-RCC.VCOSAIOutputFreq_Value=192000000
+RCC.RTCHSEDivFreq_Value=4000000
+RCC.SAIAFreq_Value=96000000
+RCC.SAIBFreq_Value=96000000
+RCC.SDIOFreq_Value=90000000
+RCC.SYSCLKFreq_VALUE=180000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.USBFreq_Value=90000000
+RCC.VCOI2SOutputFreq_Value=384000000
+RCC.VCOInputFreq_Value=2000000
+RCC.VCOOutputFreq_Value=360000000
+RCC.VCOSAIOutputFreq_Value=384000000
 SH.FMC_A0.0=FMC_A0
 SH.FMC_A0.ConfNb=1
 SH.FMC_A1.0=FMC_A1
@@ -899,5 +932,7 @@ SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2
 SH.S_TIM4_CH2.ConfNb=1
+USART3.IPParameters=VirtualMode
+USART3.VirtualMode=VM_ASYNC
 board=STM32F469I-DISCO
 boardIOC=true
