--- a/STM32F469I-DISCO/F469I-DISCO_Bring-Up/F469I-DISCO_Bring-Up.ioc
+++ b/STM32F469I-DISCO/F469I-DISCO_Bring-Up/F469I-DISCO_Bring-Up.ioc
@@ -1,55 +1,108 @@
 #MicroXplorer Configuration settings - do not modify
+DSIHOST.AEIE=HAL_DSI_ERROR_NONE
+DSIHOST.ClockLaneHS2LPTime=35
+DSIHOST.ClockLaneLP2HSTime=35
+DSIHOST.DataLaneHS2LPTime=35
+DSIHOST.DataLaneLP2HSTime=35
+DSIHOST.DataLaneMaxReadTime=0
+DSIHOST.GCEIE=HAL_DSI_ERROR_GEN
+DSIHOST.HighSpeedTransmissionTimeout=0
+DSIHOST.HorizontalBackPorch=68
+DSIHOST.HorizontalLine=1940
+DSIHOST.HorizontalSyncActive=4
+DSIHOST.IPParameters=StopWaitTime,NumberOfLanes,LPHorizontalFrontPorchEnable,LPHorizontalBackPorchEnable,LPVerticalActiveEnable,LPVerticalFrontPorchEnable,LPVerticalBackPorchEnable,LPVerticalSyncActiveEnable,ClockLaneHS2LPTime,ClockLaneLP2HSTime,DataLaneHS2LPTime,DataLaneLP2HSTime,Mode,HorizontalSyncActive,HorizontalBackPorch,HorizontalLine,GCEIE,HighSpeedTransmissionTimeout,LowPowerReceptionTimeout,DataLaneMaxReadTime,AEIE
+DSIHOST.LPHorizontalBackPorchEnable=DSI_LP_HBP_ENABLE
+DSIHOST.LPHorizontalFrontPorchEnable=DSI_LP_HFP_ENABLE
+DSIHOST.LPVerticalActiveEnable=DSI_LP_VACT_ENABLE
+DSIHOST.LPVerticalBackPorchEnable=DSI_LP_VBP_ENABLE
+DSIHOST.LPVerticalFrontPorchEnable=DSI_LP_VFP_ENABLE
+DSIHOST.LPVerticalSyncActiveEnable=DSI_LP_VSYNC_ENABLE
+DSIHOST.LowPowerReceptionTimeout=0
+DSIHOST.Mode=DSI_VID_MODE_BURST
+DSIHOST.NumberOfLanes=DSI_TWO_DATA_LANES
+DSIHOST.StopWaitTime=10
 DSIHOST_CKN.GPIOParameters=GPIO_Label
 DSIHOST_CKN.GPIO_Label=DSI_CK_N
 DSIHOST_CKN.Locked=true
+DSIHOST_CKN.Mode=DSIHost_Video
 DSIHOST_CKN.Signal=DSIHOST_CKN
 DSIHOST_CKP.GPIOParameters=GPIO_Label
 DSIHOST_CKP.GPIO_Label=DSI_CK_P
 DSIHOST_CKP.Locked=true
+DSIHOST_CKP.Mode=DSIHost_Video
 DSIHOST_CKP.Signal=DSIHOST_CKP
 DSIHOST_D0N.GPIOParameters=GPIO_Label
 DSIHOST_D0N.GPIO_Label=DSI_D0_N
 DSIHOST_D0N.Locked=true
+DSIHOST_D0N.Mode=DSIHost_Video
 DSIHOST_D0N.Signal=DSIHOST_D0N
 DSIHOST_D0P.GPIOParameters=GPIO_Label
 DSIHOST_D0P.GPIO_Label=DSI_D0_P
 DSIHOST_D0P.Locked=true
+DSIHOST_D0P.Mode=DSIHost_Video
 DSIHOST_D0P.Signal=DSIHOST_D0P
 DSIHOST_D1N.GPIOParameters=GPIO_Label
 DSIHOST_D1N.GPIO_Label=DSI_D1_N
 DSIHOST_D1N.Locked=true
+DSIHOST_D1N.Mode=DSIHost_Video
 DSIHOST_D1N.Signal=DSIHOST_D1N
 DSIHOST_D1P.GPIOParameters=GPIO_Label
 DSIHOST_D1P.GPIO_Label=DSI_D1_P
 DSIHOST_D1P.Locked=true
+DSIHOST_D1P.Mode=DSIHost_Video
 DSIHOST_D1P.Signal=DSIHOST_D1P
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
+LTDC.ActiveW=800
+LTDC.Alpha_L0=255
+LTDC.BlendingFactor1_L0=LTDC_BLENDING_FACTOR1_PAxCA
+LTDC.BlendingFactor2_L0=LTDC_BLENDING_FACTOR2_PAxCA
+LTDC.FBStartAdress_L0=0x08020000
+LTDC.HBP=34
+LTDC.HFP=34
+LTDC.HSPolarity=LTDC_HSPOLARITY_AH
+LTDC.HSync=2
+LTDC.IPParameters=HSync,HBP,ActiveW,HFP,VSync,VBP,VFP,HSPolarity,VSPolarity,Layers,WindowX1_L0,WindowY1_L0,Alpha_L0,BlendingFactor1_L0,BlendingFactor2_L0,FBStartAdress_L0,ImageWidth_L0,ImageHeight_L0
+LTDC.ImageHeight_L0=480
+LTDC.ImageWidth_L0=800
+LTDC.Layers=0
+LTDC.VBP=150
+LTDC.VFP=150
+LTDC.VSPolarity=LTDC_VSPOLARITY_AH
+LTDC.VSync=120
+LTDC.WindowX1_L0=800
+LTDC.WindowY1_L0=480
 Mcu.CPN=STM32F469NIH6
 Mcu.Family=STM32F4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=USART3
-Mcu.IPNb=3
+Mcu.IP0=DSIHOST
+Mcu.IP1=LTDC
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=USART3
+Mcu.IPNb=6
 Mcu.Name=STM32F469NIHx
 Mcu.Package=TFBGA216
 Mcu.Pin0=PE4
 Mcu.Pin1=PE3
 Mcu.Pin10=PA13
-Mcu.Pin100=PE14
-Mcu.Pin101=PB10
-Mcu.Pin102=PH8
-Mcu.Pin103=PH10
-Mcu.Pin104=PA3
-Mcu.Pin105=PB0
-Mcu.Pin106=PE7
-Mcu.Pin107=PE10
-Mcu.Pin108=PE12
-Mcu.Pin109=PE15
+Mcu.Pin100=PE11
+Mcu.Pin101=PE14
+Mcu.Pin102=PB10
+Mcu.Pin103=PH8
+Mcu.Pin104=PH10
+Mcu.Pin105=PA3
+Mcu.Pin106=PB0
+Mcu.Pin107=PE7
+Mcu.Pin108=PE10
+Mcu.Pin109=PE12
 Mcu.Pin11=PE5
-Mcu.Pin110=PE13
-Mcu.Pin111=PB11
+Mcu.Pin110=PE15
+Mcu.Pin111=PE13
+Mcu.Pin112=PB11
+Mcu.Pin113=VP_LTDC_DSIMode
+Mcu.Pin114=VP_SYS_VS_Systick
 Mcu.Pin12=PB9
 Mcu.Pin13=PB7
 Mcu.Pin14=PB6
@@ -139,23 +192,26 @@ Mcu.Pin9=PA14
 Mcu.Pin90=PE8
 Mcu.Pin91=PG5
 Mcu.Pin92=PG4
-Mcu.Pin93=PH9
-Mcu.Pin94=PH11
-Mcu.Pin95=PF14
-Mcu.Pin96=PJ2
-Mcu.Pin97=PF11
-Mcu.Pin98=PE9
-Mcu.Pin99=PE11
-Mcu.PinsNb=112
+Mcu.Pin93=PH7
+Mcu.Pin94=PH9
+Mcu.Pin95=PH11
+Mcu.Pin96=PF14
+Mcu.Pin97=PJ2
+Mcu.Pin98=PF11
+Mcu.Pin99=PE9
+Mcu.PinsNb=115
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F469NIHx
 MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DSI_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.LTDC_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.LTDC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -650,6 +706,13 @@ PH5.GPIO_PuPdOD=GPIO_PULLUP
 PH5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PH5.Locked=true
 PH5.Signal=I2C2_SDA
+PH7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PH7.GPIO_Label=LCD_RST
+PH7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PH7.GPIO_PuPd=GPIO_NOPULL
+PH7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PH7.Locked=true
+PH7.Signal=GPIO_Output
 PH8.GPIOParameters=GPIO_Label
 PH8.GPIO_Label=D16
 PH8.Locked=true
@@ -772,7 +835,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_LTDC_Init-LTDC-true-HAL-true,5-MX_DSIHOST_DSI_Init-DSIHOST-true-HAL-true
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=45000000
@@ -781,41 +844,47 @@ RCC.APB2CLKDivider=RCC_HCLK_DIV2
 RCC.APB2Freq_Value=90000000
 RCC.APB2TimFreq_Value=180000000
 RCC.CortexFreq_Value=180000000
-RCC.DSIFreq_Value=20000000
-RCC.DSITXEscFreq_Value=5000000
+RCC.DSIFreq_Value=62500000
+RCC.DSITXEscFreq_Value=15625000
 RCC.EthernetFreq_Value=180000000
 RCC.FCLKCortexFreq_Value=180000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=180000000
 RCC.HSE_VALUE=8000000
-RCC.I2SFreq_Value=192000000
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,DSIFreq_Value,DSITXEscFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,I2SFreq_Value,LCDTFTFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLDSIFreq_Value,PLLDSIVCOFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLRFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
-RCC.LCDTFTFreq_Value=96000000
+RCC.I2SFreq_Value=96000000
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,DSIFreq_Value,DSITXEscFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,I2SFreq_Value,LCDTFTFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLDSIFreq_Value,PLLDSIIDF,PLLDSINDIV,PLLDSIVCOFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLR,PLLRCLKFreq_Value,PLLRFreq_Value,PLLSAIN,PLLSAIPCLKFreq_Value,PLLSAIQ,PLLSAIQCLKFreq_Value,PLLSAIR,PLLSAIRCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
+RCC.LCDTFTFreq_Value=27428571.42857143
 RCC.MCO2PinFreq_Value=180000000
 RCC.PLLCLKFreq_Value=180000000
-RCC.PLLDSIFreq_Value=160000000
-RCC.PLLDSIVCOFreq_Value=320000000
-RCC.PLLI2SQCLKFreq_Value=96000000
-RCC.PLLI2SRCLKFreq_Value=192000000
-RCC.PLLM=4
-RCC.PLLN=180
+RCC.PLLDSIFreq_Value=500000000
+RCC.PLLDSIIDF=DSI_PLL_IN_DIV2
+RCC.PLLDSINDIV=125
+RCC.PLLDSIVCOFreq_Value=1000000000
+RCC.PLLI2SQCLKFreq_Value=48000000
+RCC.PLLI2SRCLKFreq_Value=96000000
+RCC.PLLM=8
+RCC.PLLN=360
 RCC.PLLQCLKFreq_Value=90000000
-RCC.PLLRCLKFreq_Value=180000000
-RCC.PLLRFreq_Value=180000000
+RCC.PLLR=6
+RCC.PLLRCLKFreq_Value=60000000
+RCC.PLLRFreq_Value=60000000
+RCC.PLLSAIN=384
 RCC.PLLSAIPCLKFreq_Value=192000000
-RCC.PLLSAIQCLKFreq_Value=96000000
-RCC.PLLSAIRCLKFreq_Value=192000000
+RCC.PLLSAIQ=13
+RCC.PLLSAIQCLKFreq_Value=29538461.53846154
+RCC.PLLSAIR=7
+RCC.PLLSAIRCLKFreq_Value=54857142.85714286
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
-RCC.SAIAFreq_Value=96000000
-RCC.SAIBFreq_Value=96000000
+RCC.SAIAFreq_Value=29538461.53846154
+RCC.SAIBFreq_Value=29538461.53846154
 RCC.SDIOFreq_Value=90000000
 RCC.SYSCLKFreq_VALUE=180000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.USBFreq_Value=90000000
-RCC.VCOI2SOutputFreq_Value=384000000
-RCC.VCOInputFreq_Value=2000000
+RCC.VCOI2SOutputFreq_Value=192000000
+RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=360000000
 RCC.VCOSAIOutputFreq_Value=384000000
 SH.FMC_A0.0=FMC_A0
@@ -934,5 +1003,9 @@ SH.S_TIM4_CH2.0=TIM4_CH2
 SH.S_TIM4_CH2.ConfNb=1
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
+VP_LTDC_DSIMode.Mode=RGB888
+VP_LTDC_DSIMode.Signal=LTDC_DSIMode
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=STM32F469I-DISCO
 boardIOC=true
