--- a/STM32F469I-DISCO/F469I-DISCO_Bring-Up/F469I-DISCO_Bring-Up.ioc
+++ b/STM32F469I-DISCO/F469I-DISCO_Bring-Up/F469I-DISCO_Bring-Up.ioc
@@ -51,6 +51,17 @@ DSIHOST_D1P.GPIO_Label=DSI_D1_P
 DSIHOST_D1P.Locked=true
 DSIHOST_D1P.Mode=DSIHost_Video
 DSIHOST_D1P.Signal=DSIHOST_D1P
+FMC.CASLatency1=FMC_SDRAM_CAS_LATENCY_3
+FMC.ExitSelfRefreshDelay1=7
+FMC.IPParameters=CASLatency1,ReadBurst1,SDClockPeriod1,LoadToActiveDelay1,ExitSelfRefreshDelay1,RowCycleDelay1,SelfRefreshTime1,WriteRecoveryTime1,RPDelay1,RCDDelay1
+FMC.LoadToActiveDelay1=2
+FMC.RCDDelay1=2
+FMC.RPDelay1=2
+FMC.ReadBurst1=FMC_SDRAM_RBURST_ENABLE
+FMC.RowCycleDelay1=7
+FMC.SDClockPeriod1=FMC_SDRAM_CLOCK_PERIOD_2
+FMC.SelfRefreshTime1=4
+FMC.WriteRecoveryTime1=3
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -76,12 +87,13 @@ LTDC.WindowY1_L0=480
 Mcu.CPN=STM32F469NIH6
 Mcu.Family=STM32F4
 Mcu.IP0=DSIHOST
-Mcu.IP1=LTDC
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=USART3
-Mcu.IPNb=6
+Mcu.IP1=FMC
+Mcu.IP2=LTDC
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=USART3
+Mcu.IPNb=7
 Mcu.Name=STM32F469NIHx
 Mcu.Package=TFBGA216
 Mcu.Pin0=PE4
@@ -208,6 +220,7 @@ MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DSI_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.FMC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.LTDC_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -684,6 +697,7 @@ PH15.Signal=FMC_D23
 PH2.GPIOParameters=GPIO_Label
 PH2.GPIO_Label=SDCKE0 [MT48LC4M32B2B5-6A_CKE]
 PH2.Locked=true
+PH2.Mode=SdramChipSelect1_1
 PH2.Signal=FMC_SDCKE0
 PH3.GPIOParameters=GPIO_PuPd,GPIO_Speed_High_Default,GPIO_Label,GPIO_Mode
 PH3.GPIO_Label=SDNE0 [MT48LC4M32B2B5-6A_CS]
@@ -691,6 +705,7 @@ PH3.GPIO_Mode=GPIO_MODE_AF_PP
 PH3.GPIO_PuPd=GPIO_NOPULL
 PH3.GPIO_Speed_High_Default=GPIO_SPEED_FREQ_VERY_HIGH
 PH3.Locked=true
+PH3.Mode=SdramChipSelect1_1
 PH3.Signal=FMC_SDNE0
 PH4.GPIOParameters=GPIO_Speed,GPIO_PuPdOD,GPIO_Label,GPIO_Mode
 PH4.GPIO_Label=I2C2_SCL [CS43L22_SCL]
@@ -835,7 +850,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_LTDC_Init-LTDC-true-HAL-true,5-MX_DSIHOST_DSI_Init-DSIHOST-true-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_LTDC_Init-LTDC-true-HAL-true,5-MX_DSIHOST_DSI_Init-DSIHOST-true-HAL-true,6-MX_FMC_Init-FMC-true-HAL-true
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=45000000
@@ -887,97 +902,97 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=360000000
 RCC.VCOSAIOutputFreq_Value=384000000
-SH.FMC_A0.0=FMC_A0
+SH.FMC_A0.0=FMC_A0,12b-sda1
 SH.FMC_A0.ConfNb=1
-SH.FMC_A1.0=FMC_A1
+SH.FMC_A1.0=FMC_A1,12b-sda1
 SH.FMC_A1.ConfNb=1
-SH.FMC_A10.0=FMC_A10
+SH.FMC_A10.0=FMC_A10,12b-sda1
 SH.FMC_A10.ConfNb=1
-SH.FMC_A11.0=FMC_A11
+SH.FMC_A11.0=FMC_A11,12b-sda1
 SH.FMC_A11.ConfNb=1
-SH.FMC_A14_BA0.0=FMC_BA0
+SH.FMC_A14_BA0.0=FMC_BA0,FourSdramBanks1
 SH.FMC_A14_BA0.ConfNb=1
-SH.FMC_A15_BA1.0=FMC_BA1
+SH.FMC_A15_BA1.0=FMC_BA1,FourSdramBanks1
 SH.FMC_A15_BA1.ConfNb=1
-SH.FMC_A2.0=FMC_A2
+SH.FMC_A2.0=FMC_A2,12b-sda1
 SH.FMC_A2.ConfNb=1
-SH.FMC_A3.0=FMC_A3
+SH.FMC_A3.0=FMC_A3,12b-sda1
 SH.FMC_A3.ConfNb=1
-SH.FMC_A4.0=FMC_A4
+SH.FMC_A4.0=FMC_A4,12b-sda1
 SH.FMC_A4.ConfNb=1
-SH.FMC_A5.0=FMC_A5
+SH.FMC_A5.0=FMC_A5,12b-sda1
 SH.FMC_A5.ConfNb=1
-SH.FMC_A6.0=FMC_A6
+SH.FMC_A6.0=FMC_A6,12b-sda1
 SH.FMC_A6.ConfNb=1
-SH.FMC_A7.0=FMC_A7
+SH.FMC_A7.0=FMC_A7,12b-sda1
 SH.FMC_A7.ConfNb=1
-SH.FMC_A8.0=FMC_A8
+SH.FMC_A8.0=FMC_A8,12b-sda1
 SH.FMC_A8.ConfNb=1
-SH.FMC_A9.0=FMC_A9
+SH.FMC_A9.0=FMC_A9,12b-sda1
 SH.FMC_A9.ConfNb=1
-SH.FMC_D0_DA0.0=FMC_D0
+SH.FMC_D0_DA0.0=FMC_D0,sd-32b-d1
 SH.FMC_D0_DA0.ConfNb=1
-SH.FMC_D10_DA10.0=FMC_D10
+SH.FMC_D10_DA10.0=FMC_D10,sd-32b-d1
 SH.FMC_D10_DA10.ConfNb=1
-SH.FMC_D11_DA11.0=FMC_D11
+SH.FMC_D11_DA11.0=FMC_D11,sd-32b-d1
 SH.FMC_D11_DA11.ConfNb=1
-SH.FMC_D12_DA12.0=FMC_D12
+SH.FMC_D12_DA12.0=FMC_D12,sd-32b-d1
 SH.FMC_D12_DA12.ConfNb=1
-SH.FMC_D13_DA13.0=FMC_D13
+SH.FMC_D13_DA13.0=FMC_D13,sd-32b-d1
 SH.FMC_D13_DA13.ConfNb=1
-SH.FMC_D14_DA14.0=FMC_D14
+SH.FMC_D14_DA14.0=FMC_D14,sd-32b-d1
 SH.FMC_D14_DA14.ConfNb=1
-SH.FMC_D15_DA15.0=FMC_D15
+SH.FMC_D15_DA15.0=FMC_D15,sd-32b-d1
 SH.FMC_D15_DA15.ConfNb=1
-SH.FMC_D16.0=FMC_D16
+SH.FMC_D16.0=FMC_D16,sd-32b-d1
 SH.FMC_D16.ConfNb=1
-SH.FMC_D17.0=FMC_D17
+SH.FMC_D17.0=FMC_D17,sd-32b-d1
 SH.FMC_D17.ConfNb=1
-SH.FMC_D18.0=FMC_D18
+SH.FMC_D18.0=FMC_D18,sd-32b-d1
 SH.FMC_D18.ConfNb=1
-SH.FMC_D19.0=FMC_D19
+SH.FMC_D19.0=FMC_D19,sd-32b-d1
 SH.FMC_D19.ConfNb=1
-SH.FMC_D1_DA1.0=FMC_D1
+SH.FMC_D1_DA1.0=FMC_D1,sd-32b-d1
 SH.FMC_D1_DA1.ConfNb=1
-SH.FMC_D20.0=FMC_D20
+SH.FMC_D20.0=FMC_D20,sd-32b-d1
 SH.FMC_D20.ConfNb=1
-SH.FMC_D21.0=FMC_D21
+SH.FMC_D21.0=FMC_D21,sd-32b-d1
 SH.FMC_D21.ConfNb=1
-SH.FMC_D22.0=FMC_D22
+SH.FMC_D22.0=FMC_D22,sd-32b-d1
 SH.FMC_D22.ConfNb=1
-SH.FMC_D23.0=FMC_D23
+SH.FMC_D23.0=FMC_D23,sd-32b-d1
 SH.FMC_D23.ConfNb=1
-SH.FMC_D24.0=FMC_D24
+SH.FMC_D24.0=FMC_D24,sd-32b-d1
 SH.FMC_D24.ConfNb=1
-SH.FMC_D25.0=FMC_D25
+SH.FMC_D25.0=FMC_D25,sd-32b-d1
 SH.FMC_D25.ConfNb=1
-SH.FMC_D26.0=FMC_D26
+SH.FMC_D26.0=FMC_D26,sd-32b-d1
 SH.FMC_D26.ConfNb=1
-SH.FMC_D27.0=FMC_D27
+SH.FMC_D27.0=FMC_D27,sd-32b-d1
 SH.FMC_D27.ConfNb=1
-SH.FMC_D28.0=FMC_D28
+SH.FMC_D28.0=FMC_D28,sd-32b-d1
 SH.FMC_D28.ConfNb=1
-SH.FMC_D29.0=FMC_D29
+SH.FMC_D29.0=FMC_D29,sd-32b-d1
 SH.FMC_D29.ConfNb=1
-SH.FMC_D2_DA2.0=FMC_D2
+SH.FMC_D2_DA2.0=FMC_D2,sd-32b-d1
 SH.FMC_D2_DA2.ConfNb=1
-SH.FMC_D30.0=FMC_D30
+SH.FMC_D30.0=FMC_D30,sd-32b-d1
 SH.FMC_D30.ConfNb=1
-SH.FMC_D31.0=FMC_D31
+SH.FMC_D31.0=FMC_D31,sd-32b-d1
 SH.FMC_D31.ConfNb=1
-SH.FMC_D3_DA3.0=FMC_D3
+SH.FMC_D3_DA3.0=FMC_D3,sd-32b-d1
 SH.FMC_D3_DA3.ConfNb=1
-SH.FMC_D4_DA4.0=FMC_D4
+SH.FMC_D4_DA4.0=FMC_D4,sd-32b-d1
 SH.FMC_D4_DA4.ConfNb=1
-SH.FMC_D5_DA5.0=FMC_D5
+SH.FMC_D5_DA5.0=FMC_D5,sd-32b-d1
 SH.FMC_D5_DA5.ConfNb=1
-SH.FMC_D6_DA6.0=FMC_D6
+SH.FMC_D6_DA6.0=FMC_D6,sd-32b-d1
 SH.FMC_D6_DA6.ConfNb=1
-SH.FMC_D7_DA7.0=FMC_D7
+SH.FMC_D7_DA7.0=FMC_D7,sd-32b-d1
 SH.FMC_D7_DA7.ConfNb=1
-SH.FMC_D8_DA8.0=FMC_D8
+SH.FMC_D8_DA8.0=FMC_D8,sd-32b-d1
 SH.FMC_D8_DA8.ConfNb=1
-SH.FMC_D9_DA9.0=FMC_D9
+SH.FMC_D9_DA9.0=FMC_D9,sd-32b-d1
 SH.FMC_D9_DA9.ConfNb=1
 SH.FMC_NBL0.0=FMC_NBL0
 SH.FMC_NBL0.ConfNb=1
@@ -987,13 +1002,13 @@ SH.FMC_NBL2.0=FMC_NBL2
 SH.FMC_NBL2.ConfNb=1
 SH.FMC_NBL3.0=FMC_NBL3
 SH.FMC_NBL3.ConfNb=1
-SH.FMC_SDCLK.0=FMC_SDCLK
+SH.FMC_SDCLK.0=FMC_SDCLK,12b-sda1
 SH.FMC_SDCLK.ConfNb=1
-SH.FMC_SDNCAS.0=FMC_SDNCAS
+SH.FMC_SDNCAS.0=FMC_SDNCAS,12b-sda1
 SH.FMC_SDNCAS.ConfNb=1
-SH.FMC_SDNRAS.0=FMC_SDNRAS
+SH.FMC_SDNRAS.0=FMC_SDNRAS,12b-sda1
 SH.FMC_SDNRAS.ConfNb=1
-SH.FMC_SDNWE.0=FMC_SDNWE
+SH.FMC_SDNWE.0=FMC_SDNWE,12b-sda1
 SH.FMC_SDNWE.ConfNb=1
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
