--- a/STM32F469I-DISCO/F469I-DISCO_Bring-Up/F469I-DISCO_Bring-Up.ioc
+++ b/STM32F469I-DISCO/F469I-DISCO_Bring-Up/F469I-DISCO_Bring-Up.ioc
@@ -1,4 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
+DMA2D.IPParameters=InputAlphaForeground
+DMA2D.InputAlphaForeground=0xFF
 DSIHOST.AEIE=HAL_DSI_ERROR_NONE
 DSIHOST.ClockLaneHS2LPTime=35
 DSIHOST.ClockLaneLP2HSTime=35
@@ -86,14 +88,15 @@ LTDC.WindowX1_L0=800
 LTDC.WindowY1_L0=480
 Mcu.CPN=STM32F469NIH6
 Mcu.Family=STM32F4
-Mcu.IP0=DSIHOST
-Mcu.IP1=FMC
-Mcu.IP2=LTDC
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=USART3
-Mcu.IPNb=7
+Mcu.IP0=DMA2D
+Mcu.IP1=DSIHOST
+Mcu.IP2=FMC
+Mcu.IP3=LTDC
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=USART3
+Mcu.IPNb=8
 Mcu.Name=STM32F469NIHx
 Mcu.Package=TFBGA216
 Mcu.Pin0=PE4
@@ -113,8 +116,9 @@ Mcu.Pin11=PE5
 Mcu.Pin110=PE15
 Mcu.Pin111=PE13
 Mcu.Pin112=PB11
-Mcu.Pin113=VP_LTDC_DSIMode
-Mcu.Pin114=VP_SYS_VS_Systick
+Mcu.Pin113=VP_DMA2D_VS_DMA2D
+Mcu.Pin114=VP_LTDC_DSIMode
+Mcu.Pin115=VP_SYS_VS_Systick
 Mcu.Pin12=PB9
 Mcu.Pin13=PB7
 Mcu.Pin14=PB6
@@ -211,7 +215,7 @@ Mcu.Pin96=PF14
 Mcu.Pin97=PJ2
 Mcu.Pin98=PF11
 Mcu.Pin99=PE9
-Mcu.PinsNb=115
+Mcu.PinsNb=116
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F469NIHx
@@ -850,7 +854,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_LTDC_Init-LTDC-true-HAL-true,5-MX_DSIHOST_DSI_Init-DSIHOST-true-HAL-true,6-MX_FMC_Init-FMC-true-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_LTDC_Init-LTDC-true-HAL-true,5-MX_DSIHOST_DSI_Init-DSIHOST-true-HAL-true,6-MX_FMC_Init-FMC-true-HAL-true,7-MX_DMA2D_Init-DMA2D-false-HAL-true
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=45000000
@@ -1018,6 +1022,8 @@ SH.S_TIM4_CH2.0=TIM4_CH2
 SH.S_TIM4_CH2.ConfNb=1
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
+VP_DMA2D_VS_DMA2D.Mode=DMA2D_Activate
+VP_DMA2D_VS_DMA2D.Signal=DMA2D_VS_DMA2D
 VP_LTDC_DSIMode.Mode=RGB888
 VP_LTDC_DSIMode.Signal=LTDC_DSIMode
 VP_SYS_VS_Systick.Mode=SysTick
