--- a/STM32F469I-DISCO/F469I-DISCO_Bring-Up/F469I-DISCO_Bring-Up.ioc
+++ b/STM32F469I-DISCO/F469I-DISCO_Bring-Up/F469I-DISCO_Bring-Up.ioc
@@ -66,6 +66,8 @@ FMC.SelfRefreshTime1=4
 FMC.WriteRecoveryTime1=3
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.I2C_Mode=I2C_Fast
+I2C1.IPParameters=I2C_Mode
 KeepUserPlacement=false
 LTDC.ActiveW=800
 LTDC.Alpha_L0=255
@@ -91,12 +93,13 @@ Mcu.Family=STM32F4
 Mcu.IP0=DMA2D
 Mcu.IP1=DSIHOST
 Mcu.IP2=FMC
-Mcu.IP3=LTDC
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=USART3
-Mcu.IPNb=8
+Mcu.IP3=I2C1
+Mcu.IP4=LTDC
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SYS
+Mcu.IP8=USART3
+Mcu.IPNb=9
 Mcu.Name=STM32F469NIHx
 Mcu.Package=TFBGA216
 Mcu.Pin0=PE4
@@ -227,6 +230,8 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.FMC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.LTDC_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.LTDC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -325,6 +330,7 @@ PB8.GPIO_Mode=GPIO_MODE_AF_OD
 PB8.GPIO_PuPdOD=GPIO_PULLUP
 PB8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB8.Locked=true
+PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
 PB9.GPIOParameters=GPIO_Speed,GPIO_PuPdOD,GPIO_Label,GPIO_Mode
 PB9.GPIO_Label=I2C1_SDA
@@ -332,6 +338,7 @@ PB9.GPIO_Mode=GPIO_MODE_AF_OD
 PB9.GPIO_PuPdOD=GPIO_PULLUP
 PB9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB9.Locked=true
+PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=SDNWE [MT48LC4M32B2B5-6A_WE]
@@ -633,7 +640,7 @@ PG5.Locked=true
 PG5.Signal=FMC_A15_BA1
 PG6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PG6.GPIO_Label=LED1 [Green]
-PG6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PG6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PG6.GPIO_PuPd=GPIO_NOPULL
 PG6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PG6.Locked=true
@@ -854,7 +861,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_LTDC_Init-LTDC-true-HAL-true,5-MX_DSIHOST_DSI_Init-DSIHOST-true-HAL-true,6-MX_FMC_Init-FMC-true-HAL-true,7-MX_DMA2D_Init-DMA2D-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_LTDC_Init-LTDC-true-HAL-true,5-MX_DSIHOST_DSI_Init-DSIHOST-true-HAL-true,6-MX_FMC_Init-FMC-true-HAL-true,7-MX_DMA2D_Init-DMA2D-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=45000000
